[project]
name = "khachapuri-delivery"
version = "0.1.0"
description = "Microservices-based food delivery platform for learning FastAPI, RabbitMQ, Docker, and QA automation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
